# murmur3

./: .pre-release-hook.sh  Cargo.toml  README.md
src/: chunked.rs  compat.rs  hasher.rs  io.rs  lib.rs  seed.rs
src/state/: mod.rs  x64_128.rs
